# text-me

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose-db.yml  docker-compose.yml  mongo-init.js  mongod.conf  pyproject.toml  sample_env
app/: pyproject.toml
app/text_me/configs/: text_me.yaml
app/text_me/static/: announcement.js  audioPlayer.js  styles.css  submitForm.js
app/text_me/templates/: announcement.html  text_form.html
app/text_me/text_me/: db.py  routes.py  settings.py  views.py
text_me/: __init__.py  init_db.py
text_me/configs/: text_me.yaml
text_me/static/: announcement.js  styles.css  submitForm.js
text_me/templates/: announcement.html  play_again.html  text_form.html
text_me/text_me/: db.py  main.py  routes.py  settings.py  views.py
