[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["text_me"]


[project]
name="text_me"
version="0.0.1"
dependencies = [
		"aiohttp",
		"aiohttp_jinja2",
		"aiodns",
		"pyyaml",
		"pymongo",
		"motor",
		]

[project.scripts]
run_srv = "text_me.text_me:run" 
